- Targeting Java 10 now. - Updated Jooby to 1.4.1 which has Java 9+ related fixes. - Updated to jOOQ 3.11.0, which has Java 9+ support. - Updated pom.xml to override a few project properties (developer, application, etc) to override the ones set in Jooby dependencies.